--- a/splash.html
+++ b/splash.html
@@ -4,6 +4,6 @@
     <title>Testing page</title>
   </head>
   <body>
-    <p>This is an example</p>
+    <p>This is an example page.</p>
   </body>
 </html>
