--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Testing page</title>
-  </head>
-  <body>
-    <p>This is an example page.</p>
-  </body>
+<head>
+    <meta http-equiv="refresh" content="0; url=https://wdd-group-c.github.io/splash.html">
+</head>
+<body>
+</body>
 </html>
