--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Redirecting</title>
     <meta http-equiv="refresh" content="0; url=https://wdd-group-c.github.io/splash.html">
 </head>
 <body>
