--- a/team.html
+++ b/team.html
@@ -20,6 +20,7 @@
     </header>
     
     <main>
+      Hello World
         <!-- Main content goes here. Should not contain any repeated content -->
     </main>
     
