--- a/gallery.html
+++ b/gallery.html
@@ -1,22 +1,27 @@
-
-<!-- Add a title and delete all the comments below including the comment in the script tag-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    
+    <style> <!--The style tag is used to decorate the page-->
+      body{
+        background-image: url("background.gif");
+        background-color: rgb(130, 185, 206);
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+    </style>
     	<script>
         // Javascript goes here
       </script>
   </head>
   <body>
     <header>
-        <!-- Header content goes here -->
+        <h1>Feel free to explore the images in this page and learn more about life below the sea</h1>
     </header>
     
     <main>
