--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <meta http-equiv="refresh" content="0; url=https://wdd-group-c.github.io/splash.html">
 </head>
 <body>
+    <p>
+        Testing text
+    </p>
 </body>
 </html>
