--- a/splash.html
+++ b/splash.html
@@ -21,6 +21,7 @@
     </header>
     
     <main>
+      Hello, World
         <!-- Main content goes here. Should not contain any repeated content -->
     </main>
     
