--- a/splash.html
+++ b/splash.html
@@ -20,6 +20,7 @@
     </header>
     
     <main>
+      Temp text
         <!-- Main content goes here. Should not contain any repeated content -->
     </main>
     
