--- a/splash.html
+++ b/splash.html
@@ -20,7 +20,7 @@
     </header>
     
     <main>
-      Temp text
+      Temp tex
         <!-- Main content goes here. Should not contain any repeated content -->
     </main>
     
