--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style> <!--The style tag is used to decorate the page-->
       body{
-        background-image: url("background.gif");
+        background-image: url("images/background.png");
         background-color: rgb(130, 185, 206);
         background-repeat: no-repeat;
         background-size: cover;
