--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-        <h1>Feel free to explore the images in this page and learn more about life below the sea</h1>
+        <h1>Feel free to explore the images in this page and learn more about life below the sea</h1><!--Main heading-->>
     </header>
     
     <main>
