temp update for sitemap

--- a/sitemap.html
+++ b/sitemap.html
@@ -6,17 +6,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title>sitemap</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     
     	<script>
         // Javascript goes here
       </script>
+      <style>
+        body{
+          background-image: url('images/background.png');
+        }
+      </style>
   </head>
   <body>
     <header>
-        <!-- Header content goes here -->
+        <h1>Explore our site using the links below</h1>
     </header>
     
     <main>
