2nd temp update to the sitemap

--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,7 @@
 
 <!-- Add a title and delete all the comments below including the comment in the script tag-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> <!--language of the document-->
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,11 +17,15 @@
         body{
           background-image: url('images/background.png');
         }
+        h1{
+          font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+          color: rgb(80, 97, 230);
+        }
       </style>
   </head>
   <body>
     <header>
-        <h1>Explore our site using the links below</h1>
+        <h1>Explore our site using the links below...</h1>
     </header>
     
     <main>
@@ -31,5 +35,5 @@
     <footer>
       <!-- Footer content goes here -->
     </footer>
-  </body>
-</html>
+  </body><!--body tag closes here-->
+</html><!--HTML tag closes here-->
