added a class and a comment to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -14,6 +14,9 @@
         background-repeat: no-repeat;
         background-size: cover;
       }
+      .image1{
+        transform: scale(1.3);
+      }
     </style>
     	<script>
         // Javascript goes here
@@ -24,8 +27,8 @@
         <h1>Feel free to explore the images in this page and learn more about life below the sea</h1><!--Main heading-->>
     </header>
     
-    <main>
-        <!-- Main content goes here. Should not contain any repeated content -->
+    <main><!--Main ag contains the main content, in this case, images and their descriptions-->
+        <div class = "image1"></div>
     </main>
     
     <footer>
