--- a/gallery.html
+++ b/gallery.html
@@ -14,9 +14,13 @@
         background-color: rgb(130, 185, 206);
         background-repeat: no-repeat;
         background-size: cover;
+
       }
       .image1{
-        transform: scale(1.3);
+        display: block;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
       }
     </style>
     	<script>
@@ -25,11 +29,13 @@
   </head>
   <body>
     <header>
-        <h1>Feel free to explore the images in this page and learn more about life below the sea</h1><!--Main heading-->>
+        <h1>Feel free to explore the images in this page and learn more about life below the sea</h1><!--Main heading-->
     </header>
     
     <main><!--Main Tag contains the main content, in this case, some images and their descriptions-->
-        <div class = "image1"></div>
+        <div class = "image1">
+          <img src = "images/lifeundersea1.png" alt = "main pic(underwater view)">
+        </div>
     </main>
     
     <footer>
