--- a/gallery.html
+++ b/gallery.html
@@ -99,7 +99,7 @@
                 background-color: rgb(221, 219, 218);
                 border-radius: 4px;
                 display: none; /*or else it will be inline-flex*/
-                width: max-content;
+                width: auto;
                 margin: auto;
 
             }
@@ -194,9 +194,11 @@
                     <dl>
                         <dt><h4>Reduce Marine Pollution</h4></dt>
                         <dd>
-                            <p>Marine pollution is the combination of chemicals and trash humans 
-                                make, <br>which are blown or thrown into the ocean.<br>  While that is a solution to get rid of trash on land,<br>
-                                it threatens the lives of marine life and therefore, needs to be reduced.<br> To fulfill the act, the following steps could be taken;</p>
+                            Marine pollution is the combination of chemicals and trash humans 
+                                make, <br>which are blown or thrown into the ocean.<br>  
+                                While that is a solution to get rid of trash on land,<br>
+                                it threatens the lives of marine life and therefore, needs to be reduced.<br> 
+                                To fulfill the act, the following steps could be taken;
                             <ul>
                                 <li>Stop the usage of plastic bags (Use reusable bags and bottles instead)</li>
                                 <li>Get together as a community to clean rivers and beaches</li>
@@ -209,7 +211,15 @@
                     <br>
                     <form>
                         <label for = "bg1"><span class = "bgLabel">change background theme</span></label>
-                        <input type="color" id="bg1" class = "bg" >
+                        <input type = "color" id = "bg1" class = "bg" onchange="changeBackground('section1', this.value)">
+                        <label for = "changefont">Change the Font</label>
+                        <select name = "fonts" id = "fonts" onchange="changefont('vertical', this.value)">
+                            <option value = "Arial">Arial</option>
+                            <option value = "Verdana">Verdana</option>
+                            <option value = "Georgia">Georgia</option>
+                            <option value = "Times New Roman">Times New Roman</option>
+                            <option value = "Comic Sans MS">Comic Sans MS</option>
+                        </select>
                     </form><br>
                 </div>
                 <span class = "exit"><button onclick = "hideEnlargement('section1')">&#10006;</button></span>
@@ -218,24 +228,33 @@
                 <img src="images/target2.png" alt = "Protect and Restore Ecosystems">
                 <div id = "vertical">
                     <dl>
-                        <dt><h4>Protect and Restore Ecosystems</h3></dt>
+                        <dt><h4>Protect and Restore Ecosystems</h4></dt>
                         <dd>People are regularly damaging the ecosystem, but to save marine life,<br>
-                            it is essential to restore the damages that have already been done and make an effort to prevent the damages.<br>
+                            it is essential to restore the damages that have already been done<br> 
+                            and make an effort to prevent the damages.<br>
                             The following steps could be taken to protect and restore the ecosystem;<br>
                             <ul>
                                 <li>Establishment of national parks, marine sanctuaries, and many more...</li>
                                 <li>Regulating laws and regulations to preserve the mentioned areas.</li>
-                                <li>Encouraging to plant native trees in deforested areas to restore forest ecosystems</li>
-                            </ul>
-                        
+                                <li>Encouraging to plant native trees in deforested 
+                                    <br>areas to restore forest ecosystems</li>
+                            </ul>           
                         
                         </dd>
                     </dl>
                     <br>
                     <br>
                     <form>
-                        <label for = "bg2"><span class = "bgLabel"> change background theme</span></label>
-                        <input type="color" id="bg2" class = "bg" onchange="changeBackground('section2', this.color)">
+                        <label for = "bg2"><span class = "bgLabel">change background theme</span></label>
+                        <input type="color" id="bg2" class="bg" onchange="changeBackground('section2', this.value)">
+                        <label for = "changefont">Change the Font</label>
+                        <select name = "fonts" id = "fonts" onchange="changefont('vertical', this.value)">
+                            <option value = "Arial">Arial</option>
+                            <option value = "Verdana">Verdana</option>
+                            <option value = "Georgia">Georgia</option>
+                            <option value = "Times New Roman">Times New Roman</option>
+                            <option value = "Comic Sans MS">Comic Sans MS</option>
+                        </select>
                     </form><br>
                 </div>
                 <span class = "exit"><button onclick = "hideEnlargement('section2')">&#10006;</button></span>
@@ -244,14 +263,32 @@
                 <img src="images/target3.png" alt = "Reduce Ocean Acidification">
                 <div id = "vertical">
                     <dl>
-                        <dt><h4>Protect and Restore Ecosystems</h3></dt>
-                        <dd>Description for target3</dd>
+                        <dt><h4>Protect and Restore Ecosystems</h4></dt>
+                        <dd>Ocean acidification occurs when the PH value decreases for a long period,
+                            <br>caused by the intake of carbon dioxide (CO)2.
+                            <br>this poses threats to the coral reefs, shellfish and various other marine organisms.
+                            <br>Following are some strategies to prevent ocean acidification;
+                            <ul>
+                                <li>Increasing the use of solar winds and hydroelectric power</li>
+                                <li>Promoting energy efficiency </li>
+                                <li>Reducing the reliance on fossil fuels</li>
+                            </ul>
+
+                        </dd>
                     </dl>
                     <br>
                     <br>
                     <form>
-                        <label for = "bg3"><span class = "bgLabel"> change background theme</span></label>
+                        <label for = "bg3"><span class = "bgLabel">change background theme</span></label>
                         <input type="color" id="bg3" class = "bg" >
+                        <label for = "changefont">Change the Font</label>
+                        <select name = "fonts" id = "fonts" onchange="changefont('vertical', this.value)">
+                            <option value = "Arial">Arial</option>
+                            <option value = "Verdana">Verdana</option>
+                            <option value = "Georgia">Georgia</option>
+                            <option value = "Times New Roman">Times New Roman</option>
+                            <option value = "Comic Sans MS">Comic Sans MS</option>
+                        </select>
                     </form><br>
                 </div>
                 <span class = "exit"><button onclick = "hideEnlargement('section3')">&#10006;</button></span>
@@ -260,14 +297,26 @@
                 <img src="images/target4.png" alt = "Protect and Restore Ecosystems">
                 <div id = "vertical">
                     <dl>
-                        <dt><h4>Protect and Restore Ecosystems</h3></dt>
-                        <dd>Description for target4</dd>
+                        <dt><h4>Protect and Restore Ecosystems</h4></dt>
+                        <dd>Sustainable fishing is a good approach as it respects marine systems<br> 
+                            by adapting to the natural reproductive rates of fish, maintains a balance,<br> 
+                            and ensures their survival. These methods help avoid capturing species<br> 
+                            that do not contain commercial value.
+                        </dd>
                     </dl>
                     <br>
                     <br>
                     <form>
-                        <label for = "bg4"><span class = "bgLabel"> change background theme</span></label>
+                        <label for = "bg4"><span class = "bgLabel">change background theme</span></label>
                         <input type="color" id="bg4" class = "bg" >
+                        <label for = "changefont">Change the Font</label>
+                        <select name = "fonts" id = "fonts" onchange="changefont('section1', this.value)">
+                            <option value = "Arial">Arial</option>
+                            <option value = "Verdana">Verdana</option>
+                            <option value = "Georgia">Georgia</option>
+                            <option value = "Times New Roman">Times New Roman</option>
+                            <option value = "Comic Sans MS">Comic Sans MS</option>
+                        </select>
                     </form><br>
                 </div>
                 <span class = "exit"><button onclick = "hideEnlargement('section4')">&#10006;</button></span>
@@ -276,14 +325,30 @@
                 <img src="images/target5.png" alt = "Protect and Restore Ecosystems">
                 <div id = "vertical">
                     <dl>
-                        <dt><h4>Protect and Restore Ecosystems</h3></dt>
-                        <dd>Description for target5</dd>
+                        <dt><h4>Protect and Restore Ecosystems</h4></dt>
+                        <dd>Conserving the coastal and marine areas is crucial to ensure the health of the marine ecosystems.<br>
+                            Additionally, it is vital to maintain biodiversity and sustain fisheries.<br>
+                            Following are some ways to conserve coastal and marine areas
+                            <ul>
+                                <li>Create zones within the MPA to prohibit all extractive activities.</li>
+                                <li>Strengthen regulations to prevent oil spills and reduce their impact</li>
+                                <li>Save mangrove forests </li>
+                            </ul>
+                        </dd>
                     </dl>
                     <br>
                     <br>
                     <form>
                         <label for = "bg5"><span class = "bgLabel">change background theme</span></label>
                         <input type="color" id="bg5" class = "bg" >
+                        <label for = "changefont">Change the Font</label>
+                        <select name = "fonts" id = "fonts" onchange="changefont('vertical', this.value)">
+                            <option value = "Arial">Arial</option>
+                            <option value = "Verdana">Verdana</option>
+                            <option value = "Georgia">Georgia</option>
+                            <option value = "Times New Roman">Times New Roman</option>
+                            <option value = "Comic Sans MS">Comic Sans MS</option>
+                        </select>
                     </form><br>
                 </div>
                 <span class = "exit"><button onclick = "hideEnlargement('section5')">&#10006;</button></span>
@@ -292,14 +357,32 @@
                 <img src="images/target6.png" alt = "Protect and Restore Ecosystems">
                 <div id = "vertical">
                     <dl>
-                        <dt><h4>Protect and Restore Ecosystems</h3></dt>
-                        <dd>Description for target6</dd>
+                        <dt><h4>Protect and Restore Ecosystems</h4></dt>
+                        <dd>By ending subsidies that contribute to overfishing, we can ensure long-term health<br>
+                            of marine ecosystems and the communities that are dependent on them.<br>
+                            Following are some ways to do so
+                            <ul>
+                                <li>Increase the number of individuals who monitor<br>
+                                    fishing activities and enforce laws related to subsidy reforms</li>
+                                <li>Collaborate with national parties to develop<br>
+                                    coordinated strategies to reduce overfishing</li>
+                                <li>Provide fishers with training to adapt to sustainable practices</li>
+                            </ul>
+                        </dd>
                     </dl>
                     <br>
                     <br>
                     <form>
-                        <label for = "bg6"><span class = "bgLabel"> change background theme</span></label>
+                        <label for = "bg6"><span class = "bgLabel">change background theme</span></label>
                         <input type="color" id="bg6" class = "bg" >
+                        <label for = "changefont">Change the Font</label>
+                        <select name = "fonts" id = "fonts" onchange="changefont('vertical', this.value)">
+                            <option value = "Arial">Arial</option>
+                            <option value = "Verdana">Verdana</option>
+                            <option value = "Georgia">Georgia</option>
+                            <option value = "Times New Roman">Times New Roman</option>
+                            <option value = "Comic Sans MS">Comic Sans MS</option>
+                        </select>
                     </form><br>
                 </div>
                 <span class = "exit"><button onclick = "hideEnlargement('section6')">&#10006;</button></span>
@@ -321,6 +404,9 @@
             function nextthreetargets(prev, next){
                 document.getElementById(prev).style.display = "none";
                 document.getElementById(next).style.display = "inline-flex";
+            }
+            function changefont(section, font){
+                document.getElementById(section).style.font = font;
             }
         </script>
     </body>
