--- a/gallery.html
+++ b/gallery.html
@@ -151,16 +151,17 @@
         <header><!--this section appears at the top of the page-->
         </header>
         <main>
-            <h1 id = "top">Gallery</h1>
-            <div id = "leftAndRightArrows">
+            <h1 id = "top">Gallery</h1><!--Main heading-->
+            <div id = "leftAndRightArrows"><!--IDs are accessed using '#' in css-->
                 <button id = "left" onclick="nextthreetargets('nextgalleryimages', 'galleryimages')">&larr;</button>
                 <button id = "right" onclick="nextthreetargets('galleryimages', 'nextgalleryimages')">&rarr;</button>
+            <!--buttons call certain functions when they are clicked by the user-->
             </div>
-            <div class = "galleryImages" id = "galleryimages">
+            <div class = "galleryImages" id = "galleryimages"><!--clases are accessed usinf '.' in css-->
                 <!--target thumbnails-->
                 <div class = "target" id = "target1" onclick = "showEnlargement('section1')">
-                    <img src="images/target1.png" alt = "Reduce Marine Pollution">
-                    <p>Reduce Marine Pollution</p>
+                    <img src="images/target1.png" alt = "Reduce Marine Pollution"><!--alt is used to describe the picture if it is unaccessible is certain browsers-->
+                    <p>Reduce Marine Pollution</p><!--Thumbnail description -->>
                 </div>
                 <div class = "target" id = "target2" onclick = "showEnlargement('section2')">
                     <img src = "images/target2.png" alt = "Protect and Restore Ecosystems">
@@ -171,7 +172,7 @@
                     <p>Reduce Ocean Acidification</p>
                 </div>
                     
-            </div>
+            </div><!--the next three thumbnails will appear when the right arrow is clicked-->
             <div class = "nextgalleryImages" id = "nextgalleryimages">
                 <!--target thumbnails-->
                 <div class = "target" id = "target4" onclick = "showEnlargement('section4')">
@@ -188,11 +189,11 @@
                 </div>
                     
             </div>
-            <div class = "enlarged" id = "section1">
+            <div class = "enlarged" id = "section1"><!--this section displays an enlarged version of each image in the thumbnail and provides a brief description -->
                 <img src="images/target1.png" alt = "Reduce Marine Pollution">
                 <div id = "vertical">
                     <dl>
-                        <dt><h4>Reduce Marine Pollution</h4></dt>
+                        <dt><h4>Reduce Marine Pollution</h4></dt><!--heading of the enlarged content is smaller in size compared to the main heading since h4 is used-->
                         <dd>
                             Marine pollution is the combination of chemicals and trash humans 
                                 make, <br>which are blown or thrown into the ocean.<br>  
@@ -200,7 +201,7 @@
                                 it threatens the lives of marine life and therefore, needs to be reduced.<br> 
                                 To fulfill the act, the following steps could be taken;
                             <ul>
-                                <li>Stop the usage of plastic bags (Use reusable bags and bottles instead)</li>
+                                <li>Stop the usage of plastic bags (Use reusable bags and bottles instead)</li><!--strategies are mentioned using an unordered list-->
                                 <li>Get together as a community to clean rivers and beaches</li>
                                 <li>Avoid littering</li>
                                 <li>Proper disposal of trash</li>
@@ -211,9 +212,9 @@
                     <br>
                     <form>
                         <label for = "bg1"><span class = "bgLabel">change background theme</span></label>
-                        <input type = "color" id = "bg1" class = "bg" onchange="changeBackground('section1', this.value)">
+                        <input type = "color" id = "bg1" class = "bg" onchange="changeBackground('section1', this.value)"><!--the user is able to change the backround color of the enlarged portion-->
                         <label for = "changefont">Change the Font</label>
-                        <select name = "fonts" id = "fonts" onchange="changefont('vertical', this.value)">
+                        <select name = "fonts" id = "fonts" onchange="changefont('vertical', this.value)"><!--the font can also be changed by the user-->
                             <option value = "Arial">Arial</option>
                             <option value = "Verdana">Verdana</option>
                             <option value = "Georgia">Georgia</option>
@@ -222,7 +223,7 @@
                         </select>
                     </form><br>
                 </div>
-                <span class = "exit"><button onclick = "hideEnlargement('section1')">&#10006;</button></span>
+                <span class = "exit"><button onclick = "hiddenEnlargement('section1')">&#10006;</button></span>
             </div>
             <div class = "enlarged" id = "section2">
                 <img src="images/target2.png" alt = "Protect and Restore Ecosystems">
@@ -257,7 +258,7 @@
                         </select>
                     </form><br>
                 </div>
-                <span class = "exit"><button onclick = "hideEnlargement('section2')">&#10006;</button></span>
+                <span class = "exit"><button onclick = "hiddenEnlargement('section2')">&#10006;</button></span>
             </div>
             <div class = "enlarged" id = "section3">
                 <img src="images/target3.png" alt = "Reduce Ocean Acidification">
@@ -291,7 +292,7 @@
                         </select>
                     </form><br>
                 </div>
-                <span class = "exit"><button onclick = "hideEnlargement('section3')">&#10006;</button></span>
+                <span class = "exit"><button onclick = "hiddenEnlargement('section3')">&#10006;</button></span>
             </div>
             <div class = "enlarged" id = "section4">
                 <img src="images/target4.png" alt = "Protect and Restore Ecosystems">
@@ -319,7 +320,7 @@
                         </select>
                     </form><br>
                 </div>
-                <span class = "exit"><button onclick = "hideEnlargement('section4')">&#10006;</button></span>
+                <span class = "exit"><button onclick = "hiddenEnlargement('section4')">&#10006;</button></span>
             </div>
             <div class = "enlarged" id = "section5">
                 <img src="images/target5.png" alt = "Protect and Restore Ecosystems">
@@ -351,7 +352,7 @@
                         </select>
                     </form><br>
                 </div>
-                <span class = "exit"><button onclick = "hideEnlargement('section5')">&#10006;</button></span>
+                <span class = "exit"><button onclick = "hiddenEnlargement('section5')">&#10006;</button></span>
             </div>
             <div class = "enlarged" id = "section6">
                 <img src="images/target6.png" alt = "Protect and Restore Ecosystems">
@@ -385,7 +386,7 @@
                         </select>
                     </form><br>
                 </div>
-                <span class = "exit"><button onclick = "hideEnlargement('section6')">&#10006;</button></span>
+                <span class = "exit"><button onclick = "hiddenEnlargement('section6')">&#10006;</button></span>
             </div>
             <br>
             <a href = "#top"><span> back to top </span></a>
@@ -395,7 +396,7 @@
             function showEnlargement(sectionId){
                 document.getElementById(sectionId).style.display = "inline-flex";
             }
-            function hideEnlargement(sectionId){
+            function hiddenEnlargement(sectionId){
                 document.getElementById(sectionId).style.display = "none";
             }
             function changeBackground(sectionId, color){
