--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@ Can move through the "Skipped" prompts by hitting tab once and then pressing the
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Profile Registration</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="other stylesheets/profile.css">
+    <link rel="stylesheet" href="otherstylesheets/profile.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
