Big final update

--- a/profile.html
+++ b/profile.html
@@ -15,6 +15,7 @@ Can move through the "Skipped" prompts by hitting tab once and then pressing the
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <meta name="description" content="Profile creation page">
 
       <title>Profile Registration</title>
 
@@ -30,6 +31,19 @@ Can move through the "Skipped" prompts by hitting tab once and then pressing the
       <div id="content-wrapper">
          <!-- Header section -->
          <header>
+            <nav>
+               <a href="home.html"><img src="images/logo.webp" alt="Logo" id="logo"></a>
+               <div class="nav-link">
+                   <ul>
+                       <li><a href="home.html">HOME</a></li>
+                       <li><a href="shop.html">SHOP</a></li>
+                       <li><a href="gallery.html">GALLERY</a></li>
+                       <li><a href="feedback.html">FEEDBACK</a></li>
+                       <li><a href="site.html">SITE MAP</a></li>
+                       <li><a href="team.html">ABOUT US</a></li>
+                   </ul>
+               </div>
+           </nav>
             <h1 id="heading">PROFILE CREATOR</h1>
 
             <!-- Attribution for background design -->
@@ -58,6 +72,9 @@ Can move through the "Skipped" prompts by hitting tab once and then pressing the
                   <li><kbd>Enter</kbd> - Starts the creator or to finish submitting a skipped prompt.</li>
                   <li>Use <kbd>Tab</kbd> to navigate through "Skipped" prompts, then use <kbd>&uarr;</kbd> and <kbd>&darr;</kbd> arrows to move between them.</li>
                </ol>
+
+               <br>
+               <h3>Mouse controls are also available and are fully functional</h3>
             </aside>
 
             <div class="Button" id="startButton">START</div>
@@ -90,6 +107,14 @@ Can move through the "Skipped" prompts by hitting tab once and then pressing the
             <span id="outputText">Output</span>
             <div id="output" aria-live="polite"></div>
          </main>
+
+         <footer>
+            <h4>About Us</h4>
+            <p style="color: white;">Welcome to Life Below Water, a passionate community dedicated to preserving our marine ecosystems. Our journey began with a simple idea to protect and conserve the beauty and biodiversity of our oceans.Join us as we work together to ensure a sustainable and thriving ocean for future generations.</p>
+            <div class="social">
+                <a href="pageeditor-student3.html" target="_blank"><i class="fa-regular fa-pen-to-square">Page Editor</i></a>
+            </div>
+            <p style="color: white;">copyright ©2024. Designed by Sulaiman Rizwan</p>         </footer>
       </div>
 
       <!-- JavaScript file for interactive functionality -->
