--- a/team.html
+++ b/team.html
@@ -5,6 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <meta name="description" content="This page is used to showcase the team that contributed to the design of the website.">
 
       <title>Team</title>
 
@@ -17,9 +18,23 @@
    </head>
    <body>
       <header>
+         <nav>
+            <a href="home.html"><img src="images/logo.webp" alt="Logo"></a>
+            <div class="nav-link">
+                <ul>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="shop.html">SHOP</a></li>
+                    <li><a href="gallery.html">GALLERY</a></li>
+                    <li><a href="feedback.html">FEEDBACK</a></li>
+                    <li><a href="site.html">SITE MAP</a></li>
+                    <li><a href="team.html">ABOUT US</a></li>
+                </ul>
+            </div>
+        </nav>
 
          <h1>Student Details</h1>
-         <h3>About Us - Hover over the images for additional details</h3>
+         <h2>About Us</h2>
+         <h3>Hover Over The Images For Additional Details</h3>
 
       </header>
       <main>
@@ -32,7 +47,7 @@
             <!-- First team member -->
             <figure>
 
-               <img src="images/sulaimanprofile.jpg" alt="Sulaiman profile picture">
+               <img src="images/Sulaiman.webp" alt="Sulaiman profile picture" width="320" height="320">
                <figcaption>
                   <span class="name">Mohomed Sulaiman</span>
                   <br>
@@ -47,7 +62,7 @@
 
             <!-- Second team member -->
             <figure>
-               <img src="images/sarahprofile.jpg" alt="Sarah profile picture">
+               <img src="images/Sarah.webp" alt="Sarah profile picture" width="320" height="320">
                <figcaption>
                   <span class="name">Sarah Samuel</span>
                   <div class="tasks">
@@ -60,7 +75,7 @@
 
             <!-- Third team member -->
             <figure>
-               <img src="images/kirushanthprofile.png" alt="Kirushanth profile picture">
+               <img src="images/kirushanthprofile.png" alt="Kirushanth profile picture" width="320" height="320">
                <figcaption>
                   <span class="name">Selvaratnam Kirushanth</span>
                   <div class="tasks">
@@ -73,7 +88,7 @@
 
             <!-- Fourth team member -->
             <figure>
-               <img src="images/lakeshanprofile.jpg" alt="Lakeshan profile picture">
+               <img src="images/Lackeshan.webp" alt="Lakeshan profile picture" width="320" height="320">
                <figcaption>
                   <span class="name">Sothilingam Lakeshan</span>
                   <div class="tasks">
@@ -86,5 +101,14 @@
 
          </div>
       </main>
+
+      <footer>
+         <h4>About Us</h4>
+         <p style="color: white;">Welcome to Life Below Water, a passionate community dedicated to preserving our marine ecosystems. Our journey began with a simple idea to protect and conserve the beauty and biodiversity of our oceans.Join us as we work together to ensure a sustainable and thriving ocean for future generations.</p>
+         <div class="social">
+             <a href="pageeditor-student3.html" target="_blank"><i class="fa-regular fa-pen-to-square">Page Editor</i></a>
+         </div>
+         <p style="color: white;">copyright ©2024. Designed by Sulaiman Rizwan</p>
+     </footer>
    </body>
 </html>
