--- a/contentpage-student3.html
+++ b/contentpage-student3.html
@@ -33,7 +33,7 @@
                 <li><a href="shop.html">SHOP</a></li>
                 <li><a href="gallery.html">GALLERY</a></li>
                 <li><a href="feedback.html">FEEDBACK</a></li>
-                <li><a href="site.html">SITE MAP</a></li>
+                <li><a href="sitemap.html">SITE MAP</a></li>
                 <li><a href="team.html">ABOUT US</a></li>
             </ul>
         </div>
