--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@ Can move through the "Skipped" prompts by hitting tab once and then pressing the
                        <li><a href="shop.html">SHOP</a></li>
                        <li><a href="gallery.html">GALLERY</a></li>
                        <li><a href="feedback.html">FEEDBACK</a></li>
-                       <li><a href="site.html">SITE MAP</a></li>
+                       <li><a href="sitemap.html">SITE MAP</a></li>
                        <li><a href="team.html">ABOUT US</a></li>
                    </ul>
                </div>
