--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
 
             <!-- Third team member -->
             <figure>
-               <img src="images/kirushanthprofile.png" alt="Kirushanth profile picture" width="320" height="320">
+               <img src="images/Kirushanth.webp" alt="Kirushanth profile picture" width="320" height="320">
                <figcaption>
                   <span class="name">Selvaratnam Kirushanth</span>
                   <div class="tasks">
