--- a/pageeditor-student3.html
+++ b/pageeditor-student3.html
@@ -1,8 +1,4 @@
 
-<!-- Change the pixels to vh vw-->
-<!-- Change my styles to follow css-->
-<!-- Remember to change the position of the attribution to fixed maybe-->
- <!-- REMOVE THE ANCHORING TO GO BOTTOM AND TOP AND USE JAVASCRIPT FOR THAT-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,14 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Page Editor for student 3 detailing the pages completed and what was learnt throughout the coursework">
     <title>Page Editor - Student 3</title>
+
+    <!-- Link to external stylesheet -->
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="otherstylesheets\editorstudent3.css">
+    <link rel="stylesheet" href="otherstylesheets/editorstudent3.css">
+
+
+    <!-- Link to favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     
   </head>
   <body>
     <header>
-      <header>
         <nav>
            <a href="home.html"><img src="images/logo.webp" alt="Logo"></a>
            <div class="nav-link">
@@ -37,6 +37,7 @@
     
     <main id="top">
       <div id="intro">
+        <!-- My details-->
         <h2>Details:</h2>
         <hr>
         Name: Sulaiman Rizwan <br>
@@ -48,6 +49,7 @@
       <br>
       <a href="#bottom" >Jump To Bottom</a>
 
+      <!-- Pages That I have Done -->
       <div>
         <h3>Profile</h3>
         <div class="textcntent">
@@ -91,6 +93,8 @@
 
       </div>
 
+
+    <!-- What I have learnt during the coursework -->
       <div id="bottom">
         <h3>Learnt</h3>
         <div class="textcontent">
