--- a/feedback.html
+++ b/feedback.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="feedback.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
@@ -16,10 +16,10 @@
             <div class="nav-link">
                 <ul>
                     <li><a href="home.html">HOME</a></li>
-                    <li><a href="#">SHOP</a></li>
-                    <li><a href="#">GALLERY</a></li>
-                    <li><a href="feedback.html">FEEDBACK</a></li>
-                    <li><a href="#">SITE MAP</a></li>
+                    <li><a href="shop.html">SHOP</a></li>
+                    <li><a href="gallery.html">GALLERY</a></li>
+                    <li><a href="feedback.html" class="active">FEEDBACK</a></li>
+                    <li><a href="sitemap.html">SITE MAP</a></li>
                     <li><a href="#">ABOUT US</a></li>
                 </ul>
             </div>
@@ -53,18 +53,39 @@
                         <small class="error"></small>
                     </div>
                 </div>
+                <div class="selectors">
+                    <div class="input-group">
+                        <label for="informative-website">Was this website useful </label>
+                        <div class="radio-group" style="margin-top: 2%; text-align: center;">
+                            <input type="radio" id="informative-yes" name="informative" value="yes">
+                            <label for="informative-yes">Yes</label><br>
+                            <input type="radio" id="informative-no" name="informative" value="no">
+                            <label for="informative-no">No</label>
+                        </div>
+                        <div class="error"></div>
+                    </div>
+                    <div class="input-group">
+                        <label for="first-time-visiting">First time visiting:</label>
+                        <div class="radio-group" style="margin-top: 2%; text-align: center;">
+                            <input type="radio" id="first-time-yes" name="first-time" value="yes">
+                            <label for="first-time-yes">Yes</label><br>
+                            <input type="radio" id="first-time-no" name="first-time" value="no">
+                            <label for="first-time-no">No</label>
+                        </div>
+                        <div class="error"></div>
+                    </div>
+                </div>
                 <div class="message input-group">
                     <textarea id="message" name="message" placeholder="Write your message"></textarea>
                     <i class="fa-solid fa-pen"></i>
                     <small class="error"></small>
                 </div>
+
                 <div class="button-area">
                     <button type="submit">Send Message</button>
                     <button type="reset">Clear</button>
                     <span>Sending your message.....</span>
                 </div>
-                
-                
             </form>
         </div>
     </section>
@@ -75,17 +96,17 @@
         </div>
     </div>
     <script src="feedback.js"></script>
-    <footer style="margin-top: -6%;">
+    <footer>
         <h4>About Us</h4>
-        <p style="color: white;">Welcome to Life Below Water, a passionate community dedicated to preserving our marine ecosystems. Our journey began with a simple idea to protect and conserve the beauty and biodiversity of our oceans. Join us as we work together to ensure a sustainable and thriving ocean for future generations.</p>
+        <p>Welcome to Life Below Water, a passionate community dedicated to preserving our marine ecosystems. Our journey began with a simple idea to protect and conserve the beauty and biodiversity of our oceans. Join us as we work together to ensure a sustainable and thriving ocean for future generations.</p>
         <div class="social">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
-            <a href=""><i class="fa-regular fa-pen-to-square"></i></a>
+            <a href="pageedit-student2.html"><i class="fa-regular fa-pen-to-square"></i></a>
         </div>
-        <p style="color: white;">copyright ©2024. Designed by Kirushanth</p>
+        <p>copyright ©2024. Designed by Kirushanth Selvaratnam</p>
     </footer>
-    </body>
+</body>
 </html>
