--- a/success.html
+++ b/success.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Order Successfully Placed | Life Below Water</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" >
+    <link rel="stylesheet" href="success.css">
+</head>
+<body>
+    <div class="container">
+        <div class="row" style="background-color: #8bc349; color: #f8fff9;">
+            <p>
+                <span class="material-symbols-outlined">
+                    check_circle
+                </span>
+                <br>
+                Success
+            </p>
+        </div>
+        <div class="row" style="background-color: #fff; color: #cbcbcb;">
+            <p>Your order will be delivered soon. <br><br> <a href="buy-products.html">Continue</a></p>
+            
+        </div>
+    </div>
 
+    
+</body>
+</html>
