--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Homepage</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="home.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
@@ -17,11 +17,11 @@
                 <a href="home.html"><img src="images/logo.png" alt="Logo"></a>
                 <div class="nav-link">
                     <ul>
-                        <li><a href="home.html">HOME</a></li>
-                        <li><a href="#">SHOP</a></li>
-                        <li><a href="#">GALLERY</a></li>
+                        <li><a href="home.html" class="active">HOME</a></li>
+                        <li><a href="shop.html">SHOP</a></li>
+                        <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="feedback.html">FEEDBACK</a></li>
-                        <li><a href="#">SITE MAP</a></li>
+                        <li><a href="sitemap.html">SITE MAP</a></li>
                         <li><a href="#">ABOUT US</a></li>
                     </ul>
                 </div>
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="issue-col">
                     <h3>Impact of Plastic Pollution on Marine Life and Ecosystems</h3>
-                    <p>Plastic pollution severely impacts marine life and ecosystems, causing harm to wildlife, disrupting habitats, and contributing to the degradation of ocean health and biodiversity.<br><br><br><br><a href="#">Read More>></a></p>
+                    <p>Plastic pollution severely impacts marine life and ecosystems, causing harm to wildlife, disrupting habitats, and contributing to the degradation of ocean health and biodiversity.<br><br><br><br><a href="content-page.html">Read More>></a></p>
                 </div>
                 <div class="issue-col">
                     <h3>Coral Reef Degradation and Restoration Efforts</h3>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="issue-col">
                     <h3>Marine Protected Areas in Biodiversity Conservation</h3>
-                    <p>Marine Protected Areas (MPAs) are designated zones aimed at conserving marine ecosystems and biodiversity, ensuring sustainable use of marine resources, and protecting habitats and species from human activities.<br><br><a href="#">Read More>></a></p>
+                    <p>Marine Protected Areas (MPAs) are designated zones aimed at conserving marine ecosystems and biodiversity, ensuring sustainable use of marine resources, and protecting habitats and species from human activities.<br><br><a href="contentS4.html">Read More>></a></p>
                 </div>
             </div>
         </section>
