--- a/pageedit-stud4.html
+++ b/pageedit-stud4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
     <head>
         <meta charset = "UTF-8">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0"><!--view the window in its original size-->
@@ -34,42 +34,41 @@
                     <td>Gallery</td>
                     <td>The gallery was created using images from Pinterest, designed using CSS properties, and implemented user interaction using JavaScript</td>
                     <td><a href = "gallery.html" target = "_blank">link to Gallery</a></td>
-                    <td id = "check">&checkmark;</td>
+                    <td class = "check">&checkmark;</td>
                 </tr>
                 <tr>
                     <td>2.</td>
                     <td>Site Map</td>
                     <td>I created the site map of our website using JavaScript, CSS and HTML5. the sitemap was designed to guide the user throughout the website by providing links to each page </td>
                     <td><a href = "site.html" target = "_blank">link to Site Map</a></td>
-                    <td id = "check">&checkmark;</td>
+                    <td class = "check">&checkmark;</td>
                 </tr>
                 <tr>
                     <td>3.</td>
                     <td>Page Editor</td>
                     <td>I created the page editor using my knowledge of the table attributes in HTML. The aesthetic of this page is rather different compared to the main topic of the website</td>
                     <td><a href = "pageEditorS4.html" target = "_blank">link to Page Editor</a></td>
-                    <td id = "check">&checkmark;</td>
+                    <td class = "check">&checkmark;</td>
                 </tr>
                 <tr>
                     <td>4.</td>
                     <td>Content Page</td>
                     <td>The content page contains additional content based on the theme, "Life under water. It was created by conducting research about the sub-topic assigned to me and some aditional attrubuted that I learnt from the W3Schools Website</td>
                     <td><a href = "content.html" target = "_blank">link to Content Page</a></td>
-                    <td id = "check">&checkmark;</td>
+                    <td class = "check">&checkmark;</td>
                 </tr>
                 <tr>
                     <td>5.</td>
                     <td>Additional Javascript</td>
                     <td>Additional Javascript was implemented on the gallery page to enhance user experience and the view of the page </td>
                     <td><a href = "gallery.js" target = "_blank">link to Javascript page of gallery</a></td>
-                    <td id = "check">&checkmark;</td>
+                    <td class = "check">&checkmark;</td>
                 </tr>
 
             </table>
             <br>
             <br>
             <div class="topandbottom" ><!--section that contains the link that guides the user to the top of this page-->
-                <a href = "#about" id="bottom">Take me up &uarr;</a>
             </div>
         </main>
     </body>
