--- a/pageedit-stud4.html
+++ b/pageedit-stud4.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Page Editor</title><!--Title to be appeared in the top of the browser window-->
         <link rel = "stylesheet" href = "style.css">
-        <link rel="stylesheet" href="pageeditor.css">
+        <link rel="stylesheet" href="otherstylesheets/pageeditor.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
