--- a/pageedit-student2.html
+++ b/pageedit-student2.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Homepage</title>
-        <link rel="stylesheet" href="style1.css">
+        <link rel="stylesheet" href="page_edit_student2.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
@@ -18,6 +18,7 @@
             <p>Role: Student 2</p>
             <P>The Pages Edit By Me</P>
             <hr style="margin-left: 10%; margin-right: 10%;margin-top: 1%; border: solid black 2px;">
+            <br>
             <h3>Home Page</h3>
             <p>This homepage appears to be for an organization focused on ocean conservation and environmental protection. It highlights key initiatives like plastic pollution reduction, coral reef restoration, sustainable fisheries, and marine protected areas. The page features informative sections on these topics and allows users to volunteer or learn more through webinars and events.</p>
             <i class="fa-solid fa-house" style="margin-left: 50%; margin-top: 1.5%;"></i>
@@ -33,7 +34,7 @@
             <p>This additional content page presents a webpage emphasizing marine conservation. It includes sections with images and text detailing the importance of preserving marine biodiversity, ensuring sustainable fisheries, celebrating conservation successes, and combating ocean threats. The content is styled using CSS.</p>
             <i class="fa-solid fa-globe" style="margin-left: 50%; margin-top: 1.5%;"></i>
             <br>
-            <a href="feedback.html" style="margin-left: 45%;">Link to content page >> </a>
+            <a href="contentpage-student2.html" style="margin-left: 45%;">Link to content page >> </a>
 
             <h3 style="margin-top: 3.5%;">Navigation bar inclued in all pages</h3>
             <p>The navigation bar features a logo on the left and menu items on the right, including links to Home, Shop, Gallery, Feedback, Site Map, and About Us. The sleek design includes hover effects on links and uses flexible styling to ensure alignment and spacing, creating an intuitive and visually appealing user experience.</p>
@@ -42,3 +43,4 @@
             <p style="margin-bottom: 5%;">The footer provides an overview of "Life Below Water," a community focused on marine conservation. It invites collaboration to protect ocean biodiversity. Social media icons link to Facebook, Twitter, Instagram, and LinkedIn, encouraging engagement. The footer concludes with copyright information, attributing the design the persion who design that particular page.</p>
         </div>
     </body>
+</html>
