--- a/contentpage-stud4.html
+++ b/contentpage-stud4.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Content</title><!--Title to be appeared in the top of the browser window-->
         <link rel = "stylesheet" href = "style.css">
-        <link rel = "stylesheet" href = "contentS4.css">
+        <link rel = "stylesheet" href = "otherstylesheets/contentS4.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -102,7 +102,7 @@
                 <i class="fa-brands fa-twitter"></i>
                 <i class="fa-brands fa-instagram"></i>
                 <i class="fa-brands fa-linkedin"></i>
-                <a href="pageEditorS4.html"><i class="fa-regular fa-pen-to-square"></i></a>
+                <a href="pageedit-stud4.html"><i class="fa-regular fa-pen-to-square"></i></a>
             </div>
             <p style="color: white;">copyright ©2024. Designed by Sarah Aleesha Samuel</p>
         </footer>
