--- a/splash.html
+++ b/splash.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Splash-screen | Life Below Water</title>
-    <link rel="stylesheet" href="splash-screen.css">
+    <link rel="stylesheet" href="splash.css">
     <meta http-equiv="refresh" content="7; url=../home.html">
     <!-- Redirects to home page after 7 seconds -->
 </head>
