--- a/pageedit-student1.html
+++ b/pageedit-student1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Editor | Life Below Water</title>
-    <link rel="stylesheet" href="page-editor.css">
+    <link rel="stylesheet" href="page-editor-student1.css">
 </head>
 <body>
     <h1>Page Editor</h1>
