--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,16 @@
 <body>
     
     <section class="header">
-        <nav>
+        <div class="B" id="shopping-cart">
+            <!-- shopping cart button -->
+            <button class="shopping-cart-icon nav-bar-button">
+                <span class="material-symbols-outlined">
+                    shopping_cart
+                </span>
+                <span class="cart-badge" id="cart-badge">0</span>
+            </button>
+        </div>
+       <nav>
             <a href="home.html"><img src="assets/WhatsApp Image 2024-07-15 at 16.43.48_7f2ec30d.jpg" alt="Logo"></a>
             <div class="nav-link">
                 <ul>
@@ -28,17 +37,9 @@
                 </ul>
             </div>
         </nav>
+    <!-- </div> -->
     </section>
-        <div class="B" id="shopping-cart">
-            <!-- shopping cart button -->
-            <button class="shopping-cart-icon nav-bar-button">
-                <span class="material-symbols-outlined">
-                    shopping_cart
-                </span>
-                <span class="cart-badge" id="cart-badge">0</span>
-            </button>
-        </div>
-    </div>
+        
     <div class="top-heading">
         <!-- to display a blank image at the top -->
     </div>
