--- a/feedback.html
+++ b/feedback.html
@@ -19,8 +19,8 @@
                     <li><a href="shop.html">SHOP</a></li>
                     <li><a href="gallery.html">GALLERY</a></li>
                     <li><a href="feedback.html" class="active">FEEDBACK</a></li>
-                    <li><a href="sitemap.html">SITE MAP</a></li>
-                    <li><a href="#">ABOUT US</a></li>
+                    <li><a href="profile.html">PROFILE</a></li>
+                    <li><a href="team.html">ABOUT US</a></li>
                 </ul>
             </div>
         </nav>
