--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="issue-col">
                     <h3>Coral Reef Degradation and Restoration Efforts</h3>
-                    <p>Coral reef degradation threatens marine ecosystems globally. Restoration efforts focus on rebuilding and preserving these vital habitats to ensure the survival of diverse marine species and maintain ocean health.<br><br><br><a href="#">Read More>></a></p>
+                    <p>Coral reef degradation threatens marine ecosystems globally. Restoration efforts focus on rebuilding and preserving these vital habitats to ensure the survival of diverse marine species and maintain ocean health.<br><br><br><a href="contentpage-student3.html">Read More>></a></p>
                 </div>
                 <div class="issue-col">
                     <h3>Overfishing and Sustainable Fisheries Management</h3>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="issue-col">
                     <h3>Marine Protected Areas in Biodiversity Conservation</h3>
-                    <p>Marine Protected Areas (MPAs) are designated zones aimed at conserving marine ecosystems and biodiversity, ensuring sustainable use of marine resources, and protecting habitats and species from human activities.<br><br><a href="contentS4.html">Read More>></a></p>
+                    <p>Marine Protected Areas (MPAs) are designated zones aimed at conserving marine ecosystems and biodiversity, ensuring sustainable use of marine resources, and protecting habitats and species from human activities.<br><br><a href="contentpage-stud4.html">Read More>></a></p>
                 </div>
             </div>
         </section>
