--- a/contentpage-student1.html
+++ b/contentpage-student1.html
@@ -113,7 +113,7 @@
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
-            <a href=""><i class="fa-regular fa-pen-to-square"></i></a>
+            <a href="pageedit-student1.html"><i class="fa-regular fa-pen-to-square"></i></a>
         </div>
         <p style="color: white;">copyright ©2024. Designed by Ocean Action Hub</p>
     </section>
